[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/CategoryPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://theming/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/controller/Controller.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SaveData.gd" type="Script" id=4]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
category_list = NodePath("VBoxContainer/MainPanel/ScrollContainer/MarginContainer/HBoxContainer")
category_scene = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 28.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 26.0

[node name="MenuButton" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Menu"

[node name="Control" type="Control" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 68.0
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 32, 0 )

[node name="Button2" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 104.0
margin_right = 406.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Placeholder"

[node name="Button3" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 410.0
margin_right = 713.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Placeholder"

[node name="Button4" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 717.0
margin_right = 1020.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Placeholder"

[node name="MainPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 570.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainPanel/ScrollContainer"]
margin_right = 1020.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MainPanel/ScrollContainer/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 1010.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="BtnAddCategory" type="Button" parent="VBoxContainer/MainPanel/ScrollContainer/MarginContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 528.0
text = "+"

[node name="SaveData" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Header/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainPanel/ScrollContainer/MarginContainer/HBoxContainer/BtnAddCategory" to="." method="_on_BtnAddCategory_pressed"]
